<resources>
    <string name="app_name">MyKhai</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="login_tv_loz">Знання, якi пiдкорюють небо</string>
    <string name="login_ti_login">Введіть логін</string>
    <string name="login_ti_pass">Введіть пароль</string>
    <string name="ogin_no_reg_btn">Публічна інформація</string>
    <string name="login_login_empty">Логін порожній</string>
    <string name="login_login_large">Неприпустима довжина логіна</string>
    <string name="login_pass_empty">Пароль порожній</string>
    <string name="login_pass_large">Неприпустима довжина пароля</string>
    <string name="login_no_intenet">Немає підключення до Інтернету</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>
    <string name="title_activity_loggin">LogginActivity</string>
    <string name="drawer_rating">Рейтинг на стипендію</string>
    <string name="drawer_student_balls">Оцінки студента</string>
    <string name="drawer_extra_balls">Додаткові бали</string>
    <string name="drawer_subject">Вибір дисциплін</string>
    <string name="drawer_online_vote">Онлайн вибір</string>
    <string name="drawer_scheduller">Розклад занять за вибором</string>
    <string name="drawer_tools">Налаштування</string>
    <string name="drawer_exit">Вихід</string>

    <!-- settingsFragment -->
    <string name="pref_enable_save_password" translatable="false">enable_save_password</string>
    <string name="pref_enable_save_password_label">Зберігати пароль</string>
    <string name="pref_enable_save_password_true">Так</string>
    <string name="pref_enable_save_password_false">Ні</string>
    <string name="pref_enable_save_password_default" translatable="false">true</string>

    <string name="pref_enable_splash" translatable="false">enable_splash</string>
    <string name="pref_enable_splash_label">Стартова сторінка</string>
    <string name="pref_enable_splash_true">Відображати</string>
    <string name="pref_enable_splash_false">Приховувати</string>
    <string name="pref_enable_splash_default" translatable="false">true</string>

    <string name="pref_enable_intro" translatable="false">enable_intro</string>
    <string name="pref_enable_intro_label">Гайд по додатку</string>
    <string name="pref_enable_intro_true">Відображати</string>
    <string name="pref_enable_intro_false">Приховувати</string>
    <string name="pref_enable_intro_default" translatable="false">true</string>

    <string name="pre_exec_loading">Завантаження сторінки</string>
    <string name="pre_exec_get">Отримання даних</string>
    <string name="AD_err_dow_page">Невдалося завантажити сторінку</string>
    <string name="AD_check_internet">Перевірте ваше підключення та спробуйте знову</string>
    <string name="AD_repeat">Повторити</string>
    <string name="AD_exit">Вийти</string>
    <string name="search_ebt_input">Введіть: групу або фамілію</string>
    <string name="search_ov_input">Введіть: предмет, фамілію або групу</string>
    <string name="search_s_input">Введіть: предмет, фамілію або групу</string>
    <string name="nav_year">Навчальний рік:</string>
    <string name="semestr">Семестр:</string>
    <string name="login_no_auth">Невдалося авторизоватися</string>
    <string name="login_q_exit">Вийти?</string>
    <string name="login_exit_quest">Ви дійсно бажаете завершити роботу?</string>
    <string name="login_yes">Так</string>
    <string name="login_no">Ні</string>
    <string name="not_corr_logpass">Не вірний логін або пароль!</string>
    <string name="logorpass_empty">Логін або пароль пусті!</string>
    <string name="main_title">Оцінки студента ХАІ</string>
    <string name="main_alert">Для перегляду приватної інформаціі необхідно здійснити вхід</string>
    <string name="main_no_enter">Необхідно увійти!</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">НАСТУПНИЙ</string>
    <string name="skip">ПРОПУСТИТИ</string>
    <string name="start">ЗАКІНЧИТИ</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

</resources>
