<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="@string/pref_enable_save_password_default"
            android:key="@string/pref_enable_save_password"
            android:summaryOff="@string/pref_enable_save_password_false"
            android:summaryOn="@string/pref_enable_save_password_true"
            android:title="@string/pref_enable_save_password_label" />

        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="@string/pref_enable_splash_default"
            android:key="@string/pref_enable_splash"
            android:summaryOff="@string/pref_enable_splash_false"
            android:summaryOn="@string/pref_enable_splash_true"
            android:title="@string/pref_enable_splash_label" />

        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="@string/pref_enable_intro_default"
            android:key="@string/pref_enable_intro"
            android:summaryOff="@string/pref_enable_intro_false"
            android:summaryOn="@string/pref_enable_intro_true"
            android:title="@string/pref_enable_intro_label" />


</android.support.v7.preference.PreferenceScreen>